syntax = "proto3";

package user_grpc;

option go_package = "user_grpc;user_grpc";

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string email = 1;
    string passwords = 2;
}

message LoginRequest {
    string email = 1;
    string passwords = 2;
}

message RegisterResponse {
    string status = 1;
}

message LoginResponse {
    string status = 1;
}
